--- a/newHTML/section-sot.html
+++ b/newHTML/section-sot.html
@@ -105,12 +105,12 @@ fluo.com.mx
       <img onmouseover="changeIcon('over', 'menu/menu-', this)" onmouseout="changeIcon('out', 'menu/menu-', this)" src="img/menu/menu-out.svg" height="50">
     </a>
   </nav>
-  <div id="backgroundProducto" class="inicioSot">
+  <div id="backgroundProducto" class="sot-0">
     <!-- <div id="papas" style="background-image:url('img/papas/tlayolis-jalapeno.png')"></div> -->
   </div>
   <section id="mainProducto">
     <article class="header showDisplayFlex">
-      <header>
+      <header id="coverHeader" class="hideOpacity">
         <img src="img/sot/logotipo-sot.svg" alt="Logotipo Tlayolis" width="320">
         <p>
           Sot es una deliciosa botana de harina
@@ -126,11 +126,11 @@ fluo.com.mx
     </article>
     <!-- CAMOTE -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this, 'sot')">
+      <div class="producto elemRight" onmouseover="hoverProducto(this, 'sot')">
         <img src="img/bulletS2.svg" alt="">
         <img id="mock" src="img/sot/camote.png" alt="">
       </div>
-      <div class="info">
+      <div class="info elemLeft">
         <h2>Camote</h2>
         <p>El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
         <div style="background-image:url('img/tablas/sot-1.png');"></div>
@@ -142,11 +142,11 @@ fluo.com.mx
     </article>
     <!-- YUCA -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this, 'sot')">
+      <div class="producto elemRight" onmouseover="hoverProducto(this, 'sot')">
         <img src="img/bulletS3.svg">
         <img id="mock" src="img/sot/yuca.png" alt="">
       </div>
-      <div class="info">
+      <div class="info elemLeft">
         <h2>Yuca</h2>
         <p>El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
         <div style="background-image:url('img/tablas/sot-2.png');"></div>
@@ -158,11 +158,11 @@ fluo.com.mx
     </article>
     <!-- CAMOTE Y YUCA -->
     <article class="hideDisplay">
-      <div class="producto" onmouseover="hoverProducto(this, 'sot')">
+      <div class="producto elemRight" onmouseover="hoverProducto(this, 'sot')">
         <img src="img/bulletS1.svg" alt="">
         <img id="mock" src="img/sot/camoteyuca.png" alt="">
       </div>
-      <div class="info">
+      <div class="info elemLeft">
         <h2>Camote y yuca</h2>
         <p>El mood ideal para salir de  esta y conocer nuevos lugares, personas y experiencias.</p>
         <div style="background-image:url('img/tablas/sot-3.png');"></div>
@@ -195,23 +195,27 @@ fluo.com.mx
   <div id="preventHeight" class="hideDisplay">
     <p>Por favor incrementa la altura de tu pantalla</p>
   </div>
+  <!-- TRANSITION -->
+  <div id="transitionSot" style="background-image:url('img/transition/sot-1.png');"></div>
+  <!-- AUDIO -->
   <audio id="hoverSound">
     <source src="assets/hover.mp3" type="audio/mpeg">
   </audio>
-  <audio id="hoverProductoTlayolis">
-    <source src="assets/hoverTlayolis.mp3" type="audio/mpeg">
-  </audio>
-  <audio id="hoverProductoPotet">
-    <source src="assets/hoverPotet.mp3" type="audio/mpeg">
+  <audio id="transitionSotSound">
+    <source src="assets/transitionSot.mp3" type="audio/mpeg">
   </audio>
   <audio id="hoverProductoSot">
     <source src="assets/hoverSot.mp3" type="audio/mpeg">
   </audio>
   <script src="js/bowser.min.js" charset="utf-8"></script>
+  <script src="js/anime.min.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
   <script type="text/javascript">
     window.onload = function(){
       countLoading();
+      setTimeout(function(){
+        fadeInHeader();
+      },1000);
       setPhone();
       // detectswipe('interfaz', swipeTransformIndex);
     }
@@ -223,6 +227,16 @@ fluo.com.mx
         preventHeight('min');
       } else {
         preventHeight('max');
+      }
+    }
+    document.onkeydown = checkKey;
+    function checkKey(e) {
+      e = e || window.event;
+      if (e.keyCode == '37') {
+        countsliderProducto('prev');
+      }
+      if (e.keyCode == '39') {
+        countsliderProducto('next');
       }
     }
   </script>
