--- a/newHTML/section-potet.html
+++ b/newHTML/section-potet.html
@@ -127,7 +127,7 @@ fluo.com.mx
     <!-- SAL DE MAR -->
     <article class="hideDisplay">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'potet')">
-        <img src="img/bulletP1.svg" alt="">
+        <img src="img/bulletP1.svg">
         <img id="mock" src="img/potet/saldemar.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -143,7 +143,7 @@ fluo.com.mx
     <!-- HABANERO -->
     <article class="hideDisplay">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'potet')">
-        <img src="img/bulletP2.svg" alt="">
+        <img src="img/bulletP2.svg">
         <img id="mock" src="img/potet/habanero.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -159,7 +159,7 @@ fluo.com.mx
     <!-- BBQ -->
     <article class="hideDisplay">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'potet')">
-        <img src="img/bulletP3.svg" alt="">
+        <img src="img/bulletP3.svg">
         <img id="mock" src="img/potet/chilearbol.png" alt="">
       </div>
       <div class="info elemLeft">
