--- a/newHTML/section-sot.html
+++ b/newHTML/section-sot.html
@@ -127,7 +127,7 @@ fluo.com.mx
     <!-- CAMOTE -->
     <article class="hideDisplay">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'sot')">
-        <img src="img/bulletS2.svg" alt="">
+        <img src="img/bulletS2.svg">
         <img id="mock" src="img/sot/camote.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -159,7 +159,7 @@ fluo.com.mx
     <!-- CAMOTE Y YUCA -->
     <article class="hideDisplay">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'sot')">
-        <img src="img/bulletS1.svg" alt="">
+        <img src="img/bulletS1.svg">
         <img id="mock" src="img/sot/camoteyuca.png" alt="">
       </div>
       <div class="info elemLeft">
