--- a/newHTML/section-tlayolis.html
+++ b/newHTML/section-tlayolis.html
@@ -128,7 +128,7 @@ fluo.com.mx
     <!-- JALAPEÑO -->
     <article class="hideDisplay">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'tlayolis')">
-        <img src="img/bulletT1.svg" alt="">
+        <img src="img/bulletT1.svg">
         <img id="mock" src="img/tlayolis/jalapeño.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -144,7 +144,7 @@ fluo.com.mx
     <!-- HABANERO -->
     <article class="hideDisplay">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'tlayolis')">
-        <img src="img/bulletT2.svg" alt="">
+        <img src="img/bulletT2.svg">
         <img id="mock" src="img/tlayolis/habanero.png" alt="">
       </div>
       <div class="info elemLeft">
@@ -160,7 +160,7 @@ fluo.com.mx
     <!-- BBQ -->
     <article class="hideDisplay">
       <div class="producto elemRight" onmouseover="hoverProducto(this, 'tlayolis')">
-        <img src="img/bulletT3.svg" alt="">
+        <img src="img/bulletT3.svg">
         <img id="mock" src="img/tlayolis/bbq.png" alt="">
       </div>
       <div class="info elemLeft">
