--- a/newHTML/section-potet.html
+++ b/newHTML/section-potet.html
@@ -172,9 +172,7 @@ fluo.com.mx
         </ul>
       </div>
     </article>
-   <article class="hideDisplay" style="border:1px solid green;">
-
-    </article>
+   <article class="hideDisplay" style="border:1px solid green;"></article>
   </section>
   <nav id="bullets">
     <ul>
@@ -190,13 +188,34 @@ fluo.com.mx
     <p>info@yot.com.mx</p>
     <p>Coded by <a href="fluo.com.mx">Fluo MX</a></p>
   </footer>
-  <nav id="interfazProducto">
-  </nav>
   <div id="preventHeight" class="hideDisplay">
     <p>Por favor incrementa la altura de tu pantalla</p>
   </div>
   <!-- TRANSITION -->
   <div id="transitionPotet" style="background-image:url('img/transition/potet-1.png');"></div>
+  <!-- ELEMENTS -->
+  <ul id="elementsPtWrap" class="hideDisplay">
+    <li class="itemPtW">
+      <img class="itemPt" src="img/items/pot-0.svg">
+    </li>
+    <li class="itemPtW">
+      <img class="itemPt" src="img/items/pot-4.svg">
+    </li>
+    <li class="itemPtW">
+      <img class="itemPt" src="img/items/pot-1.svg">
+    </li>
+    <li class="itemPtW">
+      <img class="itemPt" src="img/items/pot-2.svg">
+    </li>
+    <li class="itemPtW">
+      <img class="itemPt" src="img/items/pot-5.svg">
+    </li>
+    <li class="itemPtW">
+      <img class="itemPt" src="img/items/pot-3.svg">
+    </li>
+  </ul>
+  <!-- SWIPE -->
+  <nav id="interfazProducto"></nav>
   <!-- AUDIO -->
   <audio id="hoverSound">
     <source src="assets/hover.mp3" type="audio/mpeg">
