--- a/newHTML/section-sot.html
+++ b/newHTML/section-sot.html
@@ -190,13 +190,34 @@ fluo.com.mx
     <p>info@yot.com.mx</p>
     <p>Coded by <a href="fluo.com.mx">Fluo MX</a></p>
   </footer>
-  <nav id="interfazProducto">
-  </nav>
   <div id="preventHeight" class="hideDisplay">
     <p>Por favor incrementa la altura de tu pantalla</p>
   </div>
   <!-- TRANSITION -->
   <div id="transitionSot" style="background-image:url('img/transition/sot-1.png');"></div>
+  <!-- ELEMENTS -->
+  <ul id="elementsSotWrap" class="hideDisplay">
+    <li class="itemSotW">
+      <img class="itemSot" src="img/items/sot-0.svg">
+    </li>
+    <li class="itemSotW">
+      <img class="itemSot" src="img/items/sot-4.svg">
+    </li>
+    <li class="itemSotW">
+      <img class="itemSot" src="img/items/sot-1.svg">
+    </li>
+    <li class="itemSotW">
+      <img class="itemSot" src="img/items/sot-2.svg">
+    </li>
+    <li class="itemSotW">
+      <img class="itemSot" src="img/items/sot-5.svg">
+    </li>
+    <li class="itemSotW">
+      <img class="itemSot" src="img/items/sot-3.svg">
+    </li>
+  </ul>
+  <!-- SWIPE -->
+  <nav id="interfazProducto"></nav>
   <!-- AUDIO -->
   <audio id="hoverSound">
     <source src="assets/hover.mp3" type="audio/mpeg">
