--- a/newHTML/section-tlayolis.html
+++ b/newHTML/section-tlayolis.html
@@ -189,17 +189,38 @@ fluo.com.mx
     <p>info@yot.com.mx</p>
     <p>Coded by <a href="fluo.com.mx">Fluo MX</a></p>
   </footer>
-  <nav id="interfazProducto">
-  </nav>
   <div id="preventHeight" class="hideDisplay">
     <p>Por favor incrementa la altura de tu pantalla</p>
   </div>
   <!-- TRANSITION -->
-  <div id="transitionTlayolis">
+  <div id="transitionTlayolis" class="hideDisplay">
     <svg viewBox="0 0 1920 1080">
-    <polygon id="rectSvg" class="st0" points="1920,547.2 0,541.2 0,528.2 1920,530.2" data-pointsIn="1920,547.2 0,541.2 0,528.2 1920,530.2" data-pointsOut="1920,1095.1 0,1633.1 0,-8.9 1920,-543.3"/>
+    <polygon id="rectSvg" class="st0" points="1920,547.2 0,541.2 0,528.2 1920,530.2" data-in="1920,547.2 0,541.2 0,528.2 1920,530.2" data-out="1920,1095.1 0,1633.1 0,-8.9 1920,-543.3"/>
     </svg>
   </div>
+  <!-- ELEMENTS -->
+  <ul id="elementsTlWrap" class="hideDisplay">
+    <li class="itemTlW">
+      <img class="itemTl" src="img/items/tla-0.svg">
+    </li>
+    <li class="itemTlW">
+      <img class="itemTl" src="img/items/tla-4.svg">
+    </li>
+    <li class="itemTlW">
+      <img class="itemTl" src="img/items/tla-1.svg">
+    </li>
+    <li class="itemTlW">
+      <img class="itemTl" src="img/items/tla-2.svg">
+    </li>
+    <li class="itemTlW">
+      <img class="itemTl" src="img/items/tla-5.svg">
+    </li>
+    <li class="itemTlW">
+      <img class="itemTl" src="img/items/tla-3.svg">
+    </li>
+  </ul>
+  <!-- SWIPE -->
+  <nav id="interfazProducto"></nav>
   <audio id="hoverSound">
     <source src="assets/hover.mp3" type="audio/mpeg">
   </audio>
