--- a/newHTML/index.html
+++ b/newHTML/index.html
@@ -124,7 +124,7 @@ fluo.com.mx
       </div>
     </article>
 
-    <article class="normal hideOpacity">
+    <article class="tlayolis hideOpacity">
       <header>
         <img src="img/potet/logotipo-potet.svg" alt="Logotipo Sot Mx">
         <p class="prox">Próximamente</p>
@@ -143,7 +143,7 @@ fluo.com.mx
         <h2>¿Qué no puedes hacer tú?</h2>
         <p>#AtréveteACambiar y #RífateAHacerlo</p>
       </header>
-      <div> <div style="background-image:url('img/inicio-2.png')"></div> </div>
+      <div> <div id="tlayolisImg" style="background-image:url('img/inicio-2.png')"></div> </div>
     </article>
   </section>
   <footer class="main">
