--- a/newHTML/section-sot.html
+++ b/newHTML/section-sot.html
@@ -172,7 +172,8 @@ fluo.com.mx
         </ul>
       </div>
     </article>
-   <article class="hideDisplay" style="border:1px solid green;">
+    <!-- style="border:1px solid green;" -->
+   <article class="hideDisplay">
 
     </article>
   </section>
