--- a/newHTML/section-tlayolis.html
+++ b/newHTML/section-tlayolis.html
@@ -173,7 +173,8 @@ fluo.com.mx
         </ul>
       </div>
     </article>
-   <article class="hideDisplay" style="border:1px solid green;"></article>
+    <!-- style="border:1px solid green;" -->
+   <article class="hideDisplay"></article>
   </section>
   <nav id="bullets">
     <ul>
