--- a/newHTML/index.html
+++ b/newHTML/index.html
@@ -124,17 +124,17 @@ fluo.com.mx
       </div>
     </article>
 
-    <article class="tlayolis hideOpacity">
+    <article class="normal hideOpacity">
       <header>
-        <img src="img/potet/logotipo-potet.svg" alt="Logotipo Sot Mx">
-        <p class="prox">Próximamente</p>
-        <h2>Lo natural es ser tú</h2>
-        <p>#purasPapas</p>
+        <img src="img/potet/logotipo-potet.svg" alt="Logotipo Potet Mx">
+        <p class="prox" style="color:#000;">Próximamente</p>
+        <h2 style="color:#000;">Lo natural es ser tú</h2>
+        <p style="color:#000;">#purasPapas</p>
       </header>
       <div> <div style="background-image:url('img/inicio-1.png'); "></div> </div>
     </article>
 
-    <article class="tlayolis hideOpacity">
+    <article class="normal hideOpacity">
       <header>
         <img src="img/tlayolis/logotipo-tlayolis.svg" alt="Logotipo Sot Mx">
         <p class="prox">Próximamente</p>
