--- a/newHTML/section-potet copy.html
+++ b/newHTML/section-potet copy.html
@@ -173,7 +173,7 @@ fluo.com.mx
       </div>
     </article>
     <!-- style="border:1px solid green;" -->
-   <article id="wrapSlider" class="hideDisplay">
+   <article id="arSlider" class="hideDisplay">
     <!-- init slider -->
     <div id="initSlider1"></div>
    </article>
@@ -239,7 +239,6 @@ fluo.com.mx
   <script src="js/main.js" charset="utf-8"></script>
   <script src="js/slider.js" charset="utf-8"></script>
   <script type="text/javascript">
-
     window.onload = function(){
       countLoading();
       setTimeout(function(){
@@ -273,8 +272,6 @@ fluo.com.mx
       countsliderProducto('next');
     }
   }
-
-  var initSlider1 = new SliderYot('initSlider1');
   </script>
 </body>
 </html>
