--- a/newHTML/section-potet.html
+++ b/newHTML/section-potet.html
@@ -172,10 +172,9 @@ fluo.com.mx
         </ul>
       </div>
     </article>
-    <!-- style="border:1px solid green;" -->
+    <!-- SLIDER INTERNO -->
    <article id="wrapSlider" class="hideDisplay">
-    <!-- init slider -->
-    <div id="initSlider1"></div>
+     <div id="initSlider1"></div>
    </article>
   </section>
   <nav id="bullets">
@@ -223,7 +222,19 @@ fluo.com.mx
     </li>
   </ul>
   <!-- SWIPE -->
-  <nav id="interfazProducto"></nav>
+  <nav id="interfazProducto" class="hideDisplay"></nav>
+  <!-- CLICK SLIDER MOBILE  -->
+  <div id="sliderMobile" class="hideDisplay" onclick="evSliderMobPop('open')"></div>
+  <!-- POP SLIDER MOB -->
+  <div id="popSliderMob" class="hideDisplay" style="background-image:url('img/potet/background-potet-producto.jpg');">
+    <a id="closeMenu" class="closeMenu" role="button" onclick="evSliderMobPop('close')" onmouseover="overMenuClose('over', this)" onmouseout="overMenuClose('out', this)">
+      <span class="rotA rotccw"></span>
+      <span class="rotB rotcw"></span>
+      <img src="img/icons/circle.svg" width="35">
+    </a>
+    <img src="img/potet/s-1.png">
+    <div id="swipeSliderMob"></div>
+  </div>
   <!-- AUDIO -->
   <audio id="hoverSound">
     <source src="assets/hover.mp3" type="audio/mpeg">
@@ -239,7 +250,6 @@ fluo.com.mx
   <script src="js/main.js" charset="utf-8"></script>
   <script src="js/slider.js" charset="utf-8"></script>
   <script type="text/javascript">
-
     window.onload = function(){
       countLoading();
       setTimeout(function(){
@@ -273,8 +283,12 @@ fluo.com.mx
       countsliderProducto('next');
     }
   }
-
-  var initSlider1 = new SliderYot('initSlider1');
+  if(!checkBowser){
+    var initSlider1 = new SliderYot('initSlider1', 'potet');
+  }else{
+    setRefSliderPop('1','potet');
+    detectswipe('swipeSliderMob', swipePopMob);
+  }
   </script>
 </body>
 </html>
